--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "example/Ping-Pong-Citro2D"]
 	path = example/Ping-Pong-Citro2D
 	url = https://github.com/Licantropo3392/Ping-Pong-Citro2D
+[submodule "lib/lua"]
+	path = lib/lua
+	url = https://github.com/lua/lua
