Refactor Lua integration and graphics handling
- Removed old raylib static libraries.
- Moved main Lua script to romfs.
- Updated LuaDraw.cpp to support 3DS graphics using Citro2D.
- Implemented DeltaTime function for frame timing.
- Modified main.cpp to handle 3DS graphics initialization and rendering loop. (WIP)
- Cleaned up unused code and improved overall structure for better maintainability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,31 +11,88 @@ add_executable(${PROJECT_NAME}
     ${CMAKE_SOURCE_DIR}/src/LuaDraw.cpp
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE
-    ${CMAKE_SOURCE_DIR}/src/include
-)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
 
-if(NOT __3DS__ AND NOT __SWITCH__)
-    target_include_directories(${PROJECT_NAME} PRIVATE
-        ${CMAKE_SOURCE_DIR}/lib/lua/include
-        ${CMAKE_SOURCE_DIR}/lib/raylib/include
-    )
+find_package(PkgConfig REQUIRED)
 
-    target_link_libraries(${PROJECT_NAME}
-        ${CMAKE_SOURCE_DIR}/lib/lua/liblua54.a
-        ${CMAKE_SOURCE_DIR}/lib/raylib/lib/libraylib.a
-    )
+pkg_check_modules(LUA QUIET IMPORTED_TARGET lua5.1)
+if (NOT LUA_FOUND) # Fedora breaks compatibility
+    pkg_check_modules(LUA QUIET IMPORTED_TARGET lua-5.1)
 endif()
 
-if(__3DS__)
-    target_include_directories(${PROJECT_NAME} PRIVATE ${DEVKITPRO}/libctru/include)
-    target_link_directories(${PROJECT_NAME} PRIVATE ${DEVKITPRO}/libctru/lib)
-    target_link_libraries(${PROJECT_NAME} ctru)
+if (LUA_FOUND)
+    message(STATUS "LUA_INCLUDE_DIRS: ${LUA_INCLUDE_DIRS}")
+    message(STATUS "LUA_LIBRARIES: ${LUA_LIBRARIES}")
+
+    target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::LUA)
+else ()
+    message(STATUS "Lua 5.1 not found. Compiling Lua from source as a static library.")
+
+    add_library(LUA STATIC
+        ${CMAKE_SOURCE_DIR}/lib/lua/lapi.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lauxlib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lbaselib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lcode.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/ldebug.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/ldblib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/ldo.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/ldump.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lfunc.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lgc.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/linit.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/liolib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/llex.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lmathlib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lmem.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/loadlib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lobject.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lopcodes.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/loslib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lparser.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lstate.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lstring.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lstrlib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/ltable.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/ltablib.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/ltm.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lua.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lundump.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lvm.c
+        ${CMAKE_SOURCE_DIR}/lib/lua/lzio.c
+    )
+
+    target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/lib/lua/include)
+    target_link_libraries(${PROJECT_NAME} PRIVATE LUA)
 endif()
 
-if(__SWITCH__)
-    message(STATUS "Compilazione per Switch")
-    target_include_directories(${PROJECT_NAME} PRIVATE ${DEVKITPRO}/libnx/include)
-    target_link_directories(${PROJECT_NAME} PRIVATE ${DEVKITPRO}/libnx/lib)
-    target_link_libraries(${PROJECT_NAME} nx)
+if(NINTENDO_3DS)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE
+        __CONSOLE__="3DS" __OS__="Horizon"
+    )
+
+    # Generate a SMDH file for the executable
+    ctr_generate_smdh(${PROJECT_NAME}.smdh
+        NAME        "${PROJECT_NAME}"
+        # DESCRIPTION "LÖVE for 3DS • ${APP_VERSION}"
+        # AUTHOR      "${APP_AUTHOR}"
+        # ICON        ${APP_ICON}
+    )
+
+    # Specify that the executable is a 3DSX file
+    ctr_create_3dsx(${PROJECT_NAME}
+        SMDH  ${PROJECT_NAME}.smdh
+        ROMFS ${CMAKE_SOURCE_DIR}/romfs
+    )
+
+    # target_include_directories(${PROJECT_NAME} PRIVATE ${DEVKITPRO}/libctru/include)
+    # target_link_directories(${PROJECT_NAME} PRIVATE ${DEVKITPRO}/libctru/lib)
+    target_link_libraries(${PROJECT_NAME} PRIVATE citro2d citro3d)
+else()
+    pkg_check_modules(RAYLIB QUIET IMPORTED_TARGET raylib)
+
+    if(NOT RAYLIB_FOUND)
+        message(FATAL_ERROR "Raylib not found. Please install the development package.")
+    endif()
+
+    target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::RAYLIB)
 endif()
