--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,11 +54,14 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-    - name: Download Dependencies
-      run: curl -O https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz
+    - name: Download Raylib Dependency
+      run: curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz > ${{ github.workspace }}/raylib.tar.gz
 
-    - name: Extract Dependencies
-      run: tar -xvzf raylib-5.5_linux_amd64.tar.gz -C ${{ github.workspace }}/lib/raylib
+    - name: Extract Raylib Dependency
+      run: tar -xvzf ${{ github.workspace }}/raylib-5.5_linux_amd64.tar.gz
+
+    - name: Add Raylib to lib
+      run: mv ${{ github.workspace }}/raylib-5.5_linux_amd64/* ${{ github.workspace }}//lib/raylib
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
