--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -58,7 +58,7 @@ jobs:
       run: curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz > ${{ github.workspace }}/raylib.tar.gz
 
     - name: Extract Raylib Dependency
-      run: tar -xvzf ${{ github.workspace }}/raylib-5.5_linux_amd64.tar.gz
+      run: tar -xvzf ${{ github.workspace }}/raylib.tar.gz
 
     - name: Add Raylib to lib
       run: mv ${{ github.workspace }}/raylib-5.5_linux_amd64/* ${{ github.workspace }}//lib/raylib
