Fix CI workflow: correct path for moving Raylib files to lib directory

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -61,7 +61,7 @@ jobs:
       run: tar -xvzf ${{ github.workspace }}/raylib.tar.gz
 
     - name: Add Raylib to lib
-      run: mv ${{ github.workspace }}/raylib-5.5_linux_amd64/* ${{ github.workspace }}//lib/raylib
+      run: mv ${{ github.workspace }}/raylib-5.5_linux_amd64/* ${{ github.workspace }}/lib/raylib
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
