--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,6 +54,22 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
+    # - name: Install Lua Dependency
+    #   if: runner.os == 'Linux'
+    #   run: sudo apt update && sudo apt install -y liblua5.1-dev
+
+    - name: Create Dependency Directory
+      run: mkdir ${{ github.workspace }}/lib && mkdir ${{ github.workspace }}/lib/lua && mkdir ${{ github.workspace }}/lib/raylib
+
+    - name: Download Lua Dependency
+      run: curl -L https://www.lua.org/ftp/lua-5.1.5.tar.gz > ${{ github.workspace }}/lua5.1.tar.gz
+
+    - name: Extract Lua Dependency
+      run: tar -xvzf ${{ github.workspace }}/lua5.1.tar.gz
+
+    - name: Add Lua to lib
+      run: mv ${{ github.workspace }}/lua-5.1.5/* ${{ github.workspace }}/lib/lua
+
     - name: Download Raylib Dependency
       run: curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz > ${{ github.workspace }}/raylib.tar.gz
 
@@ -61,7 +77,7 @@ jobs:
       run: tar -xvzf ${{ github.workspace }}/raylib.tar.gz
 
     - name: Add Raylib to lib
-      run: mkdir ${{ github.workspace }}/lib && mkdir ${{ github.workspace }}/lib/raylib && mv ${{ github.workspace }}/raylib-5.5_linux_amd64/* ${{ github.workspace }}/lib/raylib
+      run: mv ${{ github.workspace }}/raylib-5.5_linux_amd64/* ${{ github.workspace }}/lib/raylib
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
