--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,10 +93,7 @@ else()
     else()
         message(STATUS "Raylib not found. Please install the development package.")
 
-        target_include_directories(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/lib/raylib/include)
-        target_link_libraries(${PROJECT_NAME} PUBLIC
-            ${CMAKE_SOURCE_DIR}/lib/raylib/lib/libraylib.a
-            PkgConfig::LUA
-        )
+        target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/lib/raylib/include)
+        target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/lib/raylib/lib/libraylib.a)
     endif()
 endif()
