--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -58,6 +58,9 @@ jobs:
     #   if: runner.os == 'Linux'
     #   run: sudo apt update && sudo apt install -y liblua5.1-dev
 
+    - name: Create lib directory
+      run: mkdir -p ${{ github.workspace }}/lib/raylib
+
     - name: Download Raylib Dependency
       run: curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz > ${{ github.workspace }}/raylib.tar.gz
 
