--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,7 +1,3 @@
-# This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
-name: CMake on multiple platforms
-
 on:
   push:
     tags: 
@@ -27,24 +23,23 @@ jobs:
       matrix:
         os: [ubuntu-latest] #, windows-latest]
         build_type: [Release]
-        c_compiler: [gcc, clang, cl]
+        c_compiler: [gcc, clang]
         include:
-          # - os: windows-latest
-          #   c_compiler: cl
-          #   cpp_compiler: cl
+          - os: windows-latest
+            sys: mingw64
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
-        exclude:
+        # exclude:
           # - os: windows-latest
           #   c_compiler: gcc
           # - os: windows-latest
           #   c_compiler: clang
-          - os: ubuntu-latest
-            c_compiler: cl
+          # - os: ubuntu-latest
+          #   c_compiler: cl
 
     steps:
     - uses: actions/checkout@v4
@@ -55,6 +50,20 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+
+    - name: 'Setup MSYS2'
+      if: runner.os == 'Windows'
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: ${{matrix.sys}}
+        update: true
+        install: >-
+          git
+          make
+        pacboy: >-
+          toolchain:p
+          cmake:p
+          ninja:p
 
     # - name: Install Lua Dependency
     #   if: runner.os == 'Linux'
