--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,3 +1,5 @@
+name: Build and Release
+
 on:
   push:
     tags: 
@@ -11,111 +13,108 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
-
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest] #, windows-latest]
-        build_type: [Release]
-        c_compiler: [gcc, clang]
         include:
-          - os: windows-latest
-            sys: mingw64
-            run:
-              shell: msys2 {0}
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
+            ext: tar.gz
+            shell: bash
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
-        # exclude:
-          # - os: windows-latest
-          #   c_compiler: gcc
-          # - os: windows-latest
-          #   c_compiler: clang
-          # - os: ubuntu-latest
-          #   c_compiler: cl
+            ext: tar.gz
+            shell: bash
+          - os: windows-latest
+            sys: mingw64
+            shell: msys2 {0}
+            ext: zip
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set reusable strings
-      # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
-      id: strings
-      shell: bash
-      run: |
-        echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+      - name: Set reusable strings
+        id: strings
+        shell: bash
+        run: echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-    - name: 'Setup MSYS2'
-      if: runner.os == 'Windows'
-      uses: msys2/setup-msys2@v2
-      with:
-        msystem: ${{matrix.sys}}
-        update: true
-        install: >-
-          git
-          make
-        pacboy: >-
-          toolchain:p
-          cmake:p
-          ninja:p
+      # --- WINDOWS SETUP ---
+      - name: Setup MSYS2
+        if: runner.os == 'Windows'
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: ${{ matrix.sys }}
+          update: true
+          install: >-
+            git
+            make
+          pacboy: >-
+            toolchain:p
+            cmake:p
+            ninja:p
+            zip:p
 
-    # - name: Install Lua Dependency
-    #   if: runner.os == 'Linux'
-    #   run: sudo apt update && sudo apt install -y liblua5.1-dev
+      # --- LINUX DEPENDENCIES ---
+      - name: Prepare Raylib (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          mkdir -p lib/raylib
+          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz -o raylib.tar.gz
+          tar -xzf raylib.tar.gz
+          mv raylib-5.5_linux_amd64/* lib/raylib
 
-    - name: Create lib directory
-      run: mkdir -p ${{ github.workspace }}/lib/raylib
+      # --- WINDOWS DEPENDENCIES ---
+      - name: Prepare Raylib (Windows)
+        if: runner.os == 'Windows'
+        shell: ${{ matrix.shell }}
+        run: |
+          mkdir -p lib/raylib
+          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win32_mingw-w64.zip -o raylib.zip
+          unzip -q raylib.zip
+          mv raylib-5.5_win32_mingw-w64/* lib/raylib
 
-    - name: Download Raylib Dependency
-      run: curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz > ${{ github.workspace }}/raylib.tar.gz
+      # --- CMAKE CONFIGURE ---
+      - name: Configure CMake
+        shell: ${{ matrix.shell }}
+        run: >
+          cmake -B ${{ steps.strings.outputs.build-output-dir }}
+          -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+          -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+          -DCMAKE_BUILD_TYPE=Release
+          -S ${{ github.workspace }}
 
-    - name: Extract Raylib Dependency
-      run: tar -xvzf ${{ github.workspace }}/raylib.tar.gz
+      # --- BUILD ---
+      - name: Build
+        shell: ${{ matrix.shell }}
+        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release
 
-    - name: Add Raylib to lib
-      run: mv ${{ github.workspace }}/raylib-5.5_linux_amd64/* ${{ github.workspace }}/lib/raylib
+      # --- PACKAGE ---
+      - name: Prepare release files
+        shell: ${{ matrix.shell }}
+        run: |
+          mkdir release
+          cp -r ./build/Aloha* ./release/ || true
+          cp -r ./romfs ./release/ || true
+          ls -R ./release
 
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: >
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -S ${{ github.workspace }}
+      - name: Compress release files (Linux)
+        if: runner.os == 'Linux'
+        run: tar -czf Aloha-${{ runner.os }}_${{ matrix.c_compiler }}.tar.gz ./release
 
-    - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      - name: Compress release files (Windows)
+        if: runner.os == 'Windows'
+        shell: ${{ matrix.shell }}
+        run: zip -r Aloha-${{ runner.os }}.zip ./release
 
-    - name: Prepapare release files
-      if: runner.os == 'Linux'
-      run: mkdir release && mv ./build/Aloha ./release && mv ./romfs ./release && ls -R ./release
-
-    - name: Compress release files
-      if: runner.os == 'Linux'
-      run: tar -czf Aloha-Linux_x64-${{ matrix.c_compiler }}.tar.gz ./release
-
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: ${{ github.ref_name }}
-        name: "Release ${{ github.ref_name }}"
-        body: "Automatic build of ${{ github.ref_name }}"
-        files: Aloha-Linux_x64-${{ matrix.c_compiler }}.tar.gz
-        prerelease: false
-
-    # - name: Test
-    #   working-directory: ${{ steps.strings.outputs.build-output-dir }}
-    #   # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-    #   # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-    #   run: ctest --build-config ${{ matrix.build_type }}
+      # --- UPLOAD RELEASE ---
+      - name: Create or Update GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: "Release ${{ github.ref_name }}"
+          body: "Automatic multi-platform build of ${{ github.ref_name }}"
+          files: |
+            Aloha-${{ runner.os }}_${{ matrix.c_compiler }}.tar.gz
+            Aloha-${{ runner.os }}.zip
+          prerelease: false
