--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -9,37 +9,69 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-
+  # ======================
+  # LINUX BUILD
+  # ======================
+  build-linux:
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-latest
-            c_compiler: gcc
-            cpp_compiler: g++
-          - os: ubuntu-latest
-            c_compiler: clang
-            cpp_compiler: clang++
-          - os: windows-latest
-            sys: mingw64
-            shell: msys2 {0}
+        compiler: [gcc, clang]
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set reusable strings
         id: strings
-        shell: bash
         run: echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-      # --- WINDOWS SETUP ---
+      - name: Prepare Raylib (Linux)
+        run: |
+          mkdir -p lib/raylib
+          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz -o raylib.tar.gz
+          tar -xzf raylib.tar.gz
+          mv raylib-5.5_linux_amd64/* lib/raylib
+
+      - name: Configure CMake
+        run: >
+          cmake -B ${{ steps.strings.outputs.build-output-dir }}
+          -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}++
+          -DCMAKE_C_COMPILER=${{ matrix.compiler }}
+          -DCMAKE_BUILD_TYPE=Release
+          -S ${{ github.workspace }}
+
+      - name: Build
+        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release
+
+      - name: Prepare release files
+        run: |
+          mkdir release
+          cp -r ./build/Aloha* ./release/ || true
+          cp -r ./romfs ./release/ || true
+          ls -R ./release
+
+      - name: Compress release files
+        run: tar -czf Aloha-Linux_${{ matrix.compiler }}.tar.gz ./release
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Aloha-Linux-${{ matrix.compiler }}
+          path: Aloha-Linux_${{ matrix.compiler }}.tar.gz
+
+
+  # ======================
+  # WINDOWS BUILD
+  # ======================
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Setup MSYS2
-        if: runner.os == 'Windows'
         uses: msys2/setup-msys2@v2
         with:
-          msystem: ${{ matrix.sys }}
+          msystem: mingw64
           update: true
           install: >-
             git
@@ -50,61 +82,57 @@ jobs:
             cmake:p
             ninja:p
 
-      # --- LINUX DEPENDENCIES ---
-      - name: Prepare Raylib (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          mkdir -p lib/raylib
-          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz -o raylib.tar.gz
-          tar -xzf raylib.tar.gz
-          mv raylib-5.5_linux_amd64/* lib/raylib
-
-      # --- WINDOWS DEPENDENCIES ---
       - name: Prepare Raylib (Windows)
-        if: runner.os == 'Windows'
+        shell: msys2 {0}
         run: |
           mkdir -p lib/raylib
           curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win32_mingw-w64.zip -o raylib.zip
           unzip -q raylib.zip
           mv raylib-5.5_win32_mingw-w64/* lib/raylib
 
-      # --- CMAKE CONFIGURE ---
       - name: Configure CMake
+        shell: msys2 {0}
         run: >
-          cmake -B ${{ steps.strings.outputs.build-output-dir }}
-          -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-          -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+          cmake -B build
+          -G "MinGW Makefiles"
           -DCMAKE_BUILD_TYPE=Release
-          -S ${{ github.workspace }}
+          -S .
 
-      # --- BUILD ---
       - name: Build
-        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release
+        shell: msys2 {0}
+        run: cmake --build build --config Release
 
-      # --- PACKAGE ---
       - name: Prepare release files
+        shell: msys2 {0}
         run: |
           mkdir release
           cp -r ./build/Aloha* ./release/ || true
           cp -r ./romfs ./release/ || true
-          ls -R ./release
+          zip -r Aloha-Windows.zip ./release
 
-      - name: Compress release files (Linux)
-        if: runner.os == 'Linux'
-        run: tar -czf Aloha-${{ runner.os }}_${{ matrix.c_compiler }}.tar.gz ./release
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Aloha-Windows
+          path: Aloha-Windows.zip
 
-      - name: Compress release files (Windows)
-        if: runner.os == 'Windows'
-        run: zip -r Aloha-${{ runner.os }}.zip ./release
 
-      # --- UPLOAD RELEASE ---
+  # ======================
+  # RELEASE
+  # ======================
+  release:
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-windows]
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: ./artifacts
+
       - name: Create or Update GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
           name: "Release ${{ github.ref_name }}"
           body: "Automatic multi-platform build of ${{ github.ref_name }}"
-          files: |
-            Aloha-${{ runner.os }}_${{ matrix.c_compiler }}.tar.gz
-            Aloha-${{ runner.os }}.zip
+          files: ./artifacts/**
           prerelease: false
