--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -33,12 +33,7 @@ jobs:
           mv raylib-5.5_linux_amd64/* lib/raylib
 
       - name: Configure CMake
-        run: >
-          cmake -B ${{ steps.strings.outputs.build-output-dir }}
-          -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}++
-          -DCMAKE_C_COMPILER=${{ matrix.compiler }}
-          -DCMAKE_BUILD_TYPE=Release
-          -S ${{ github.workspace }}
+        run: cmake -B ${{ steps.strings.outputs.build-output-dir }} -S ${{ github.workspace }}
 
       - name: Build
         run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release
@@ -92,11 +87,7 @@ jobs:
 
       - name: Configure CMake
         shell: msys2 {0}
-        run: >
-          cmake -B build
-          -G "MinGW Makefiles"
-          -DCMAKE_BUILD_TYPE=Release
-          -S .
+        run: cmake -B build -G Ninja -S .
 
       - name: Build
         shell: msys2 {0}
