Forgot unzip dependecy (MSYS2)

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -72,6 +72,7 @@ jobs:
             git
             make
             zip
+            unzip
           pacboy: >-
             toolchain:p
             cmake:p
