--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -84,8 +84,7 @@ jobs:
           mkdir -p lib/raylib
           curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win32_mingw-w64.zip -o raylib.zip
           unzip -q raylib.zip
-          cp -r raylib-5.5_win32_mingw-w64* lib/raylib || true
-          ls -R lib/raylib
+          mv raylib-5.5_win32_mingw-w64/* lib/raylib
 
       - name: Configure CMake
         shell: msys2 {0}
