--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -109,6 +109,7 @@ jobs:
         run: |
           mkdir release
           cp -r $BUILD_OUTPUT_DIR/Aloha* $WORKSPACE/release/ || true
+          cp -r $WORKSPACE/lib/raylib/lib/raylib.dll $WORKSPACE/release/ || true
           cp -r $WORKSPACE/romfs $WORKSPACE/release/ || true
           ls -R $WORKSPACE/release
 
