--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -21,34 +21,34 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set reusable strings
-        run: |
-          WORKSPACE=${{ github.workspace }}
-          echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
-          echo "BUILD_OUTPUT_DIR=$WORKSPACE/build" >> $GITHUB_ENV
+      # - name: Set reusable strings
+      #   run: |
+      #     WORKSPACE=${{ github.workspace }}
+      #     echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
+      #     echo "BUILD_OUTPUT_DIR=$WORKSPACE/build" >> $GITHUB_ENV
 
       - name: Prepare Raylib (Linux)
         run: |
-          mkdir -p $WORKSPACE/lib/raylib
-          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz -o $WORKSPACE/raylib.tar.gz
-          tar -xzf $WORKSPACE/raylib.tar.gz
-          mv $WORKSPACE/raylib-5.5_linux_amd64/* $WORKSPACE/lib/raylib
+          mkdir -p lib/raylib/
+          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_linux_amd64.tar.gz -o raylib.tar.gz
+          tar -xzf raylib.tar.gz
+          mv raylib-5.5_linux_amd64/* lib/raylib/
 
       - name: Configure CMake
-        run: cmake -B $BUILD_OUTPUT_DIR -S $WORKSPACE
+        run: cmake -B build -S .
 
       - name: Build
-        run: cmake --build $BUILD_OUTPUT_DIR
+        run: cmake --build build
 
       - name: Prepare release files
         run: |
           mkdir release
-          cp -r $BUILD_OUTPUT_DIR/Aloha* $WORKSPACE/release/ || true
-          cp -r $WORKSPACE/romfs $WORKSPACE/release/ || true
-          ls -R $WORKSPACE/release
+          cp -r build/Aloha/* release/ || true
+          cp -r romfs $WORKSPACE/release/ || true
+          ls -R release/
 
       - name: Compress release files
-        run: tar -czf Aloha-Linux_${{ matrix.compiler }}.tar.gz $WORKSPACE/release
+        run: tar -czf Aloha-Linux_${{ matrix.compiler }}.tar.gz release/
 
       - uses: actions/upload-artifact@v4
         with:
@@ -83,45 +83,51 @@ jobs:
       - name: Set reusable strings
         shell: msys2 {0}
         run: |
-          WORKSPACE=$(cygpath -u "${{ github.workspace }}")
-          echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
-          echo "BUILD_OUTPUT_DIR=$WORKSPACE/build" >> $GITHUB_ENV
+          echo "WORKSPACE=$(cygpath -u "${{ github.workspace }}")" >> $GITHUB_ENV
+      #     echo "BUILD_OUTPUT_DIR=$WORKSPACE/build" >> $GITHUB_ENV
 
       - name: Prepare Raylib (Windows)
         shell: msys2 {0}
         run: |
-          mkdir -p $WORKSPACE/lib/raylib
-          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win64_mingw-w64.zip -o $WORKSPACE/raylib.zip
-          unzip -q $WORKSPACE/raylib.zip
-          mv $WORKSPACE/raylib-5.5_win64_mingw-w64/* $WORKSPACE/lib/raylib
-          ls -R $WORKSPACE/lib/raylib
+          cd $WORKSPACE
+          mkdir -p lib/raylib/
+          curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win64_mingw-w64.zip -o raylib.zip
+          unzip -q raylib.zip
+          mv raylib-5.5_win64_mingw-w64/* $WORKSPACE/lib/raylib/
+          ls -R lib/raylib/
 
       - name: Configure CMake
         shell: msys2 {0}
-        run: cmake -B $BUILD_OUTPUT_DIR -G Ninja -S $WORKSPACE
+        run: |
+          cd $WORKSPACE
+          cmake -B build -G Ninja -S .
 
       - name: Build
         shell: msys2 {0}
-        run: cmake --build $BUILD_OUTPUT_DIR
+        run: |
+          cd $WORKSPACE
+          cmake --build build
 
       - name: Prepare release files
         shell: msys2 {0}
         run: |
+          cd $WORKSPACE
           mkdir release
-          cp -r $BUILD_OUTPUT_DIR/Aloha* $WORKSPACE/release/ || true
-          cp -r $WORKSPACE/lib/raylib/lib/raylib.dll $WORKSPACE/release/ || true
-          cp -r $WORKSPACE/romfs $WORKSPACE/release/ || true
-          ls -R $WORKSPACE/release
+          cp -r build/Aloha/* $WORKSPACE/release/ || true
+          cp -r lib/raylib/lib/raylib.dll release/ || true
+          cp -r romfs/ release/ || true
+          ls -R release/
 
       - name: Compress release files
         shell: msys2 {0}
-        run:
-          zip -r Aloha-Windows.zip $WORKSPACE/release
+        run: |
+          cd $WORKSPACE
+          zip -r Aloha-Windows.zip release/
 
       - uses: actions/upload-artifact@v4
         with:
-          name: Aloha-Windows
-          path: Aloha-Windows.zip
+          name: Aloha-Windows-mingw64
+          path: Aloha-Windows-mingw64.zip
 
 
   # ======================
